# tiny-webserver

./: README.md  tiny-webserver.cabal
app/: Main.hs
conf/: example.json  services.json
src/: Lib.hs
static/: example.html
