name:                tiny-webserver
version:             0.1.0.0
synopsis:            Webserver
description:         Please see README.md
homepage:            https://github.com/noelr/tiny-webserver#readme
license:             BSD3
license-file:        LICENSE
author:              Noel Rohrbach
maintainer:          noel@noelr.ch
copyright:           2016 Noel Rohrbach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai-extra
                     , wai-middleware-static
                     , process
                     , aeson
                     , bytestring
                     , text
  default-language:    Haskell2010

executable tiny-webserver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiny-webserver
  default-language:    Haskell2010

test-suite tiny-webserver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny-webserver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noelr/tiny-webserver
